gap fix
увеличивался gap под ширину контейнера, понерфил через grid-auto-rows

--- a/slider js/style.css
+++ b/slider js/style.css
@@ -37,6 +37,7 @@
 .content__list{
    list-style-type: none;
    display: grid;
+   grid-auto-rows: 72px;
    grid-template-columns: repeat(3, 1fr);
    row-gap: 16px;
    column-gap: 24px;
